<resources>
    <string name="app_name">SalesEPOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_tickets">TicketsActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="downloading">Downloading…</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>
    <string name="btn_add_item">Item</string>
    <string name="btn_add_client">client</string>
    <string name="btn_check_price">Price</string>
    <string name="btn_new_bill">New bill</string>
    <string name="group_quick_buttons">Quick Buttons</string>
    <string name="group_assortment">Assortment</string>
    <string name="group_bills">Bills</string>
    <string name="text_client">Client:</string>
    <string name="text_discount">Discount:</string>
    <string name="text_subtotal">Subtotal:</string>
    <string name="btn_delete_item_string">DELETE</string>
    <string name="text_price_for_1pcs">Price for 1pcs:</string>
    <string name="drawer_bill_number">Bill number:</string>
    <string name="message_attention">Attention!</string>
    <string name="message_open_shift">Do you want open shift?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_ok">OK</string>
    <string name="btn_no">No</string>
    <string name="message_close_shift">Do you want close this shift?</string>
    <string name="message_loading_workplace">loading workplace…</string>
    <string name="message_shift_expired_want_close">Shift has expired, want to close?</string>
    <string name="text_close_shift">Close shift</string>
    <string name="text_open_shift">Open shift</string>
    <string name="text_select_workplace">Select workplace item</string>
    <string name="message_no_right_to_read_workplace">No rights to view workplace! You want to enter other login?</string>
    <string name="text_loading">loading…</string>
    <string name="message_device_not_support_NFC">This device doesn\'t support NFC.</string>
    <string name="message_item_not_found">Item not found!</string>
    <string name="message_shift_not_active">Shift is not active!</string>
    <string name="text_mdl_0">MDL 0.00</string>
    <string name="message_error">Error</string>
    <string name="message_error_code">Error. Code: </string>
    <string name="message_doesn_response_from_service">Not response from service!</string>
    <string name="message_attention_delete_bill">Attention deleting bill!</string>
    <string name="message_want_delete_bill">Do you want delete it bill?</string>
    <string name="message_bill_deleted">Bill deleted: </string>
    <string name="text_bill">"Bill  "</string>
    <string name="message_is_deleted">\ is deleted!</string>
    <string name="text_undo">UNDO</string>
    <string name="message_bill_returned_open">"Bill returned state open: "</string>
    <string name="message_shift_expired">Shift has expired!</string>
    <string name="message_fiscal_device_not_connected">Fiscal device is not connected!</string>
    <string name="message_delete_bill_string">Deleted from bill item</string>
    <string name="message_change_count_bill_string">"Change count for item:  "</string>
    <string name="message_bill_created_nr">Bill created No:</string>
    <string name="messaeg_added_to_bill_item">Added to bil item: </string>
    <string name="message_shift_is_opened">Shift is opened!</string>
    <string name="message_cannot_close_shift_bill_active">You cannot close a shift while there are open bills!\nYou have left </string>
    <string name="message_open_bills">" open bills."</string>
    <string name="message_connection_error_fiscal_device">Connection error: </string>
    <string name="message_z_report_starting">Z report is in processing!</string>
    <string name="message_z_report">Z report: </string>
    <string name="message_report_z_printed_task_id">Z report printed to fiscal service.Task id: </string>
    <string name="message_z_report_working">Z report is working!</string>
    <string name="message_select_other_pay_type">Select Other payment type</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_dialog_add_item">Add item to bill</string>
    <string name="title_dialog_check_price">Check price for item</string>
    <string name="message_sync">Synchronization</string>
    <string name="message_loading_assortment">loading assortment list…</string>
    <string name="message_loading_users">loading user list…</string>
    <string name="message_loading_workplace_settings">loading workplace settings…</string>
    <string name="nav_sales">Sales</string>
    <string name="nav_sales_info">Main cash interface to make sales</string>
    <string name="nav_shifts">Shifts</string>
    <string name="nav_shift_info">Start and close shifts</string>
    <string name="nav_reports">Reports</string>
    <string name="nav_reports_info">X-Report, Z-Report</string>
    <string name="nav_financial_operation">Financial operation</string>
    <string name="nav_financial_operation_info">Insert,withdraw,collectino of the money</string>
    <string name="nav_history">History</string>
    <string name="nav_history_info">All operation made on this device</string>
    <string name="nav_settings">Settings</string>
    <string name="bill_detail_name">Name</string>
    <string name="bill_detail_quantity">Quantity</string>
    <string name="bill_detail_price">Price</string>
    <string name="bill_detail_sum">Sum</string>
    <string name="bill_detail_client">CLIENT</string>
    <string name="bill_detail_total_items">TOTAL ITEMS</string>
    <string name="bill_detail_discount">DISCOUNT</string>
    <string name="bill_detail_total">TOTAL</string>
    <string name="text_start_form_login">Login</string>
    <string name="text_start_form_log_in">Log-in</string>
    <string name="text_start_form_register_device">Register device</string>
    <string name="text_start_form_idno_company">IDNO Company</string>
    <string name="text_start_form_e_mail">E-mail</string>
    <string name="text_start_form_password">Password</string>
    <string name="text_start_form_register">Register</string>
    <string name="payment_type_text">Payment type</string>
    <string name="state_text">State</string>
    <string name="login_hint">Login</string>
    <string name="general_settings">General</string>
    <string name="company_settings">Company</string>
    <string name="company_info_settings">Information about company and workplace</string>
    <string name="sync_settings">Sync</string>
    <string name="sync_info_settings">Data synchronization settings</string>
    <string name="update_settings">Software update</string>
    <string name="update_info_settings">Download updates, last update</string>
    <string name="device_and_services_settings">Device and services</string>
    <string name="fiscal_settings">Fiscal</string>
    <string name="fiscal_info_settings">Connect fiscal device or service</string>
    <string name="initial_settings">Select parameters from the left</string>
    <string name="andoid_cash_settings">SalesEPOS: Settings</string>
    <string name="company_fragment">COMPANY</string>
    <string name="company_name">Company name</string>
    <string name="idno_company_fragment">IDNO</string>
    <string name="workplace_company_fragment">Workplace</string>
    <string name="tap_to_select_workplace">Tap to select workplace</string>
    <string name="fiscal_service_and_devices_fragment">FISCAL SERVICE AND DEVICES</string>
    <string name="connection_type_fiscal_fragment">Connection type</string>
    <string name="conn_info_fiscal_fragment">Default connection type - fiscal service</string>
    <string name="fiscal_service_fiscal_fragment">Fiscal service</string>
    <string name="direct_connection_fiscal_fragment">Direct connection</string>
    <string name="fiscal_service_settings_fiscal_fragment">Fiscal service settings</string>
    <string name="connected_to_fiscal_fragment">Connected to netcp://api.edi.md:444</string>
    <string name="fiscal_device_fiscal_fragment">Fiscal device</string>
    <string name="fiscal_device_info_fiscal_fragment">Not connected</string>
    <string name="info_shift_fragment">Shift information:</string>
    <string name="date_open_shift_fragment">Opening date of the shift</string>
    <string name="open_by_shift_fragment">Opened shift</string>
    <string name="date_close_shift_fragment">Close date</string>
    <string name="closed_by_shift_fragment">Closed the shift</string>
    <string name="sales_shift_fragment">Sales</string>
    <string name="numbers_bill_shift_fragment">Number of checks</string>
    <string name="cash_sales_shift_fragment">Cash</string>
    <string name="credit_card_sales_shift_fragment">Bank card</string>
    <string name="other_sales_shift_fragment">Other payment methods</string>
    <string name="profit_sales_shift_fragment">Revenue</string>
    <string name="cas_end_shift_shift_fragment">Cash at the end of the shift</string>
    <string name="insert_cash_shift_fragment">Funds contributed</string>
    <string name="extract_cash_shift_fragment">Withdrawn funds</string>
    <string name="cash_start_shift_shift_fragment">Cash at the beginning of the shift</string>
    <string name="cash_shift_fragment">Cash</string>
    <string name="created_bill_tickets_fragment">Created</string>
    <string name="closed_bill_tickets_fragment">Closed</string>
    <string name="author_bill_tickets_fragment">Author</string>
    <string name="client_bill_tickets_fragment">Client</string>
    <string name="payment_type_bill_tickets_fragment">Payment type</string>
    <string name="discount_bill_tickets_fragment">Discount</string>
    <string name="sum_bill_tickets_fragment">Sum</string>
    <string name="state_bill_tickets_fragment">State</string>
    <string name="synchronization_sync_fragment">SYNCHRONIZATION</string>
    <string name="start_syncronization_sync_fragment">Start syncronization</string>
    <string name="the_latest_synchronization_was_sync_fragment">The latest synchronization was:</string>
    <string name="synchronization_to_startup_sync_fragment">Synchronization to startup</string>
    <string name="sync_to_start_application_sync_fragment">Sync to start application</string>
    <string name="autosynchronization_sync_fragment">Autosynchronization</string>
    <string name="aplication_autosynchronization_sync_fragment">Aplication autosynchronization</string>
    <string name="fiscal_service_settings_dialog">Fiscal service settings</string>
    <string name="ip_fiscal_service_settings_dialog">IP</string>
    <string name="port_fiscal_service_settings_dialog">Port</string>
</resources>