<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_shapca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView73"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="#"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/created_bill_tickets_fragment"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView35"
            app:layout_constraintStart_toEndOf="@+id/textView73"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/closed_bill_tickets_fragment"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView40"
            app:layout_constraintStart_toEndOf="@+id/textView39"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/author_bill_tickets_fragment"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView60"
            app:layout_constraintStart_toEndOf="@+id/textView35"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/client_bill_tickets_fragment"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView65"
            app:layout_constraintStart_toEndOf="@+id/textView40"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/payment_type_bill_tickets_fragment"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView67"
            app:layout_constraintStart_toEndOf="@+id/textView60"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView67"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/discount_bill_tickets_fragment"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView71"
            app:layout_constraintStart_toEndOf="@+id/textView65"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/sum_bill_tickets_fragment"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView77"
            app:layout_constraintStart_toEndOf="@+id/textView67"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView77"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:gravity="center"
            android:text="@string/state_bill_tickets_fragment"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView71"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ll_list_of_tickets"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_shapca"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_rc_tickets_list" />
</androidx.constraintlayout.widget.ConstraintLayout>