<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="420dp"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_fiscal_service_settings"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/port_fiscal_service_settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_settings_fiscal_service"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel_fiscal_service_settings"
        app:layout_constraintTop_toBottomOf="@+id/port_fiscal_service_settings" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/fiscal_service_settings_dialog"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/ip_fiscal_service_settings_dialog"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <EditText
        android:id="@+id/ip_fiscal_service_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="@font/nunito_sans"
        android:inputType="text"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/port_fiscal_service_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <EditText
        android:id="@+id/port_fiscal_service_settings"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/nunito_sans"
        android:inputType="number"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ip_fiscal_service_settings"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/port_fiscal_service_settings_dialog"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/port_fiscal_service_settings"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

</androidx.constraintlayout.widget.ConstraintLayout>