<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_fiscal_type"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider32">

        <TextView
            android:id="@+id/textView89rccvfd5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/connection_type_fiscal_fragment"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/sdfretret"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/sdfretret"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/conn_info_fiscal_fragment"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView89rccvfd5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider31"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="#D8000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/csl_fiscal_device_settings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_fiscal_device_settings"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider30">

        <TextView
            android:id="@+id/textView89rccv5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/fiscal_device_fiscal_fragment"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_fiscal_device_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txt_fiscal_device_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/fiscal_device_info_fiscal_fragment"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView89rccv5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_fiscal_service_settings"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider29">

        <TextView
            android:id="@+id/textView895"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/fiscal_service_settings_fiscal_fragment"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_fiscal_service_state"
            app:layout_constraintEnd_toStartOf="@+id/divider33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/txt_fiscal_service_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/nunito_sans"
            android:text="@string/connected_to_fiscal_fragment"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView895" />

        <ImageButton
            android:id="@+id/img_btn_settings_fiscal_service"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_settings_black_36dp" />

        <View
            android:id="@+id/divider33"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="#D8000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_settings_fiscal_service"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider30"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="#D8000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/csl_fiscal_service_settings" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/fiscal_service_and_devices_fragment"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider26"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="#D8000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/csl_fiscal_type" />

    <View
        android:id="@+id/divider29"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#D8000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rd_group" />

    <RadioGroup
        android:id="@+id/rd_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checkedButton="@id/radio_btn_fiscal_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider26">

        <RadioButton
            android:id="@+id/radio_btn_fiscal_service"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:buttonTint="@color/colorAccent"
            android:fontFamily="@font/nunito_sans"
            android:layoutDirection="rtl"
            android:padding="5dp"
            android:text="@string/fiscal_service_fiscal_fragment"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_btn_fiscal_device"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:buttonTint="@color/colorAccent"
            android:fontFamily="@font/nunito_sans"
            android:layoutDirection="rtl"
            android:padding="5dp"
            android:text="@string/direct_connection_fiscal_fragment"
            android:textAlignment="textStart"
            android:textSize="18sp" />
    </RadioGroup>

    <View
        android:id="@+id/divider32"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#D8000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>